--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@notionhq/client": "^2.2.14",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
