--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.14",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
-    "lucide-react": "^0.323.0",
-    "@notionhq/client": "^2.2.14",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
+    "embla-carousel-react": "^8.0.0-rc22",
+    "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
